@@ -1,0 +1,2 @@
+Stop adding newline when saving an IDLE shell window.
+
